force-app/main/default/objects/Job_Contracts__c/Job_Contracts__c.object-meta.xml
<CustomObject>
    <label>Job Contract</label>
    <nameField>
        <label>Job Contracts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>